--- a/Lab 1/public/index.html
+++ b/Lab 1/public/index.html
@@ -9,19 +9,18 @@
 
 <body bgcolor="#000" background="Pattern1.jpg">
 <header>
- ФУТБОЛЬНЫЙ КЛУБ ЧЕЛСИ
+ ФУТБОЛЬНЫЙ КЛУБ Урал
  </header>
 
 	<p>
 	
-	Клуб основан в 1905 году, и быстро завоевал популярность среди болельщиков, но не смог выиграть ни одного трофея в первые 50 лет своего существования. «Челси» провёл 30 своих первых сезонов из 40 в Первом дивизионе, хотя зачастую клуб находился в середине турнирной таблицы или вообще сражался за сохранение места в Первом дивизионе. </p>
-	<p>К самому первому успеху «Челси» пришёл в Кубке Англии, он занял второе место в 1915 году и потерпел поражение в полуфиналах в 1911, 1920, 1932, 1950 и 1952 годах. Череда неудач была окончательно разрушена тренером Тедом Дрейком, который внёс ряд изменений в структуру клуба и привёл «Челси» к первому чемпионству в сезоне 1954/55.</p>
-   <p> В период с 1963 по 1972 год перед «Челси» ставились большие задачи, хотя они часто не исполнялись в реальности. В 1965 году был выигран Кубок Футбольной лиги, в 1970 году Кубок Англии, что дало право участвовать в Кубке обладателей кубков УЕФА, который был выигран в 1971 году, в это же время были проиграны два финала: Кубка Англии в 1967 и Кубка Футбольной лиги в 1972. </p>
-	<p>В следующем десятилетии у клуба появились финансовые проблемы, главным образом они были вызваны задолженностью возникшей из амбициозной попытки перепланировки стадиона «Стэмфорд Бридж», что привело клуб на грань банкротства. В такой ситуации клуб пребывал до прихода Джона Нила в середине 1980-х годов. При нём «Челси» выиграл Второй дивизион и вернулся в элиту английского футбола.</p>
-   <p> Дальнейшее возрождение проходило при тренерах Рууде Гуллите и Джанлуки Виалли. С 1996 по 2000 год «Челси» выиграл Кубок Англии в 1997 и 2000, Кубок Футбольной лиги и Кубок обладателей кубков УЕФА в 1998 году, и получил право на участие в Лиге чемпионов УЕФА, впервые в своей истории. В сезоне 1998/99 «Челси» боролся за чемпионство, но отстал от победителя «Манчестер Юнайтед» всего на 4 очка и занял третье место.</p>
-    <p>В 2003 году «Челси» купил российский миллиардер Роман Абрамович, и клуб вступил в нынешнюю фазу успеха. На посту главного тренера Клаудио Раниери сменил один из самых успешных молодых тренеров за последнее время — Жозе Моуринью. Всего за два сезона Моуринью добился немыслимого успеха с «Порту», чем и обратил на себя внимание. </p>
-    <p>Жозе Моуринью за три года привёл клуб к двум чемпионским титулам в сезонах 2004/05 и 2005/06, Кубку Англии и двум Кубкам Футбольной лиги в 2005 и 2007 годах. При Авраме Гранте «Челси» занял второе место в Премьер-лиге и дошёл до финала Лиги чемпионов УЕФА, где в серии пенальти уступил другому английскому клубу «Манчестер Юнайтеду». В конце сезона 2008/09 клубом руководил Гус Хиддинк, который выиграл Кубок Англии в 2009 году. В сезоне 2009/10 «Челси» впервые в своей истории выиграл золотой дубль, выиграв Премьер-лигу и Кубок Англии.</p>
-	<p>Футбольный клуб «Челси» становится футбольной сверхдержавой, собирая самые большие призы, доступные как дома, так и за рубежом, и создавая историю во многих отношениях, с игроками, которые неизменно становятся великими на все времена, по всей команде. Катализатором стал новый владелец, который только что влюбился в игру и неустанно стремится к тому, чтобы его клуб стал лучшим. Естественно, есть и близкие промахи, и прямые попадания, а множество красочных личностей на поле и за его пределами помогают написать историю эпохи владения мячом, которая длится почти 20 лет...</p>
+	<p> «Ура́л» — российский профессиональный футбольный клуб из Екатеринбурга. Выступает в РПЛ. Основан в 1930 году. Один из старейших футбольных клубов России, ведущий свою историю с момента основания команды «Уралмашстрой» при Уральском заводе тяжёлого машиностроения, затем неоднократно менявший своё название. <p>
+
+<p> В Высшей лиге СССР выступал в 1969 году, в Высшей лиге России (ныне — Российская премьер-лига) с 1992 по 1996 годы и с 2013. Участник финалов розыгрыша Кубка России 2016/17 и 2018/19, а также полуфинала Кубка Интертото 1996 года. Трёхкратный обладатель Кубка ФНЛ[2]: 2012, 2013, 2018.<p>
+
+<p> Главной домашней ареной клуба является «Екатеринбург Арена», реконструированная в рамках подготовки к чемпионату мира 2018 года. Во время реконструкции стадиона команда проводила матчи на стадионе «СКБ-Банк Арена» (бывшем стадионе «Уралмаш», реконструированном в 2014—2015 годах)[3].<p>
+
+<p> У клуба есть несколько прозвищ: оранжево-чёрные, шмели. С 2005 года шмель также является официальным талисманом команды. <p>
 	
 	<nav>
       <a href="https://example.com/inform/"> Последние матчи </a>
