--- a/Lab 1/public/index.html
+++ b/Lab 1/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8"/>
-    <title>Футбольный клуб Челси</title>
+    <title>Футбольный клуб Урал</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<link rel="stylesheet" type="text/css" href="grid-style.css">
 </head>
